<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignUpFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:src="@drawable/design_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/design"
        />
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="60dp"
        android:layout_height="130dp"
        android:scaleType="fitXY"
        android:rotation="180"
        android:src="@drawable/ellipse_one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/design"
        />
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="210dp"
        android:layout_marginStart="12dp"
        android:scaleType="fitXY"
        android:src="@drawable/design_two"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/design"
        />
    <!--Email component-->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="@id/imageView2">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/type_your_email"
                android:inputType="textEmailAddress"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="15dp"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>
    <!--Password component-->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/card_email">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pass_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/type_your_pass"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="15dp"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>

    <!--Re-Password component-->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_repass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/card_pass">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repass_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repass_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/type_your_repass"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="15dp"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:id="@+id/buttonNext"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:src="@drawable/btn"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="@id/card_repass"
        app:layout_constraintTop_toBottomOf="@id/card_repass"
        android:contentDescription="@string/btnNext"/>
    <TextView
        android:id="@+id/already_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:text="@string/already_registered"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toStartOf="@id/card_repass"
        app:layout_constraintTop_toBottomOf="@id/card_repass" />
    <TextView
        android:id="@+id/sign_in_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:text="@string/sign_in"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/already_reg"
        app:layout_constraintTop_toTopOf="@id/already_reg" />

</androidx.constraintlayout.widget.ConstraintLayout>